Feat/datadog implement (#7)
* feat/datadog-implement

--- a/api/ai/Dockerfile
+++ b/api/ai/Dockerfile
@@ -5,10 +5,17 @@ WORKDIR /app
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     PIP_DISABLE_PIP_VERSION_CHECK=1 \
-    PIP_NO_CACHE_DIR=1
+    PIP_NO_CACHE_DIR=1 \
+    DATA_STORE=/data
 
 # System deps for SSL and building psycopg2 (pg_config comes from libpq-dev)
-RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates build-essential libpq-dev && rm -rf /var/lib/apt/lists/*
+# Also install Node.js for MCP tools that require npx
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends ca-certificates build-essential libpq-dev curl \
+    && curl -fsSL https://deb.nodesource.com/setup_22.x | bash - \
+    && apt-get install -y nodejs \
+    && rm -rf /var/lib/apt/lists/* \
+    && mkdir -p /data
 
 COPY requirements.txt .
 RUN pip install --upgrade pip && pip install -r requirements.txt
