fix/github-workflows

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,10 +19,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          cache: npm
-          node-version: lts/*
+          node-version: '20'
+
       - run: npm clean-install
       - run: npm install --global corepack@latest
       - run: corepack npm audit signatures
