fix(githubwf): update trigger

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,11 +1,9 @@
 name: Release
-"on":
+on:
   push:
     branches:
       - main
-      - next
-      - beta
-      - "*.x"
+      - 'beta/**'
 permissions:
   contents: read # for checkout
 jobs:
