--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -16,6 +16,8 @@ services:
       - DATA_STORE=/data
       - TOKENIZERS_PARALLELISM=false
       - CONTEXT7_API_KEY=${CONTEXT7_API_KEY:-}
+      - ENABLE_KUBERNETES=false
+      - ENABLE_CODE_EXECUTOR=false
     volumes:
       - slar-ai-data:/data
       - slar-ai-cache:/root/.cache
