fix/ai-agent-mcp

--- a/api/ai/Dockerfile
+++ b/api/ai/Dockerfile
@@ -17,6 +17,10 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/* \
     && mkdir -p /data
 
+RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" \
+    && install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl \
+    && kubectl version --client
+
 COPY requirements.txt .
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
