--- a/api/ai/requirements.txt
+++ b/api/ai/requirements.txt
@@ -48,7 +48,6 @@ jmespath==1.0.1
 jsonref==1.1.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
-kubernetes==34.1.0
 markdown-it-py==4.0.0
 mcp==1.16.0
 mdurl==0.1.2
@@ -57,7 +56,6 @@ mpmath==1.3.0
 multidict==6.7.0
 numpy==2.3.3
 oauthlib==3.3.1
-onnxruntime==1.23.0
 openai==2.2.0
 opentelemetry-api==1.37.0
 opentelemetry-exporter-otlp-proto-common==1.37.0
@@ -95,7 +93,7 @@ rpds-py==0.27.1
 rsa==4.9.1
 s3transfer==0.14.0
 semver==3.0.4
-sentence-transformers==5.1.1
+# sentence-transformers==5.1.1  # Removed - using OpenAI embeddings instead
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
