--- a/api/.dockerignore
+++ b/api/.dockerignore
@@ -1,1 +1,35 @@
+__pycache__
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info
+dist
+build
+.git
+.gitignore
 .env
+.venv
+env/
+venv/
+ENV/
+*.log
+.DS_Store
+.vscode
+.idea
+*.swp
+*.swo
+*~
+.pytest_cache
+.coverage
+htmlcov/
+.chromadb_autogen/
+sessions/
+team_state.json
+team_history.json
+indexed_sources.json
+*.db
+*.sqlite
+node_modules/
