--- a/web/slar/package.json
+++ b/web/slar/package.json
@@ -11,6 +11,10 @@
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.55.0",
+    "@xterm/addon-canvas": "^0.7.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-web-links": "^0.11.0",
+    "@xterm/xterm": "^5.5.0",
     "highlight.js": "^11.11.1",
     "next": "15.5.0",
     "react": "19.1.0",
