--- a/api/ai/terminal/Dockerfile
+++ b/api/ai/terminal/Dockerfile
@@ -2,13 +2,18 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies, including Node.js and npm for geminicli
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
     git \
     curl \
+    nodejs \
+    npm \
     && rm -rf /var/lib/apt/lists/*
+
+# Install geminicli globally
+RUN npm install -g @google/gemini-cli@latest
 
 # Copy only requirements first for better caching
 COPY requirements.txt .
@@ -30,4 +35,3 @@ ENV TERMINAL_HOST=0.0.0.0
 
 # Run terminal server
 CMD ["python", "terminal_server.py"]
-
