--- a/deploy/docker/volumes/api/kong.yaml
+++ b/deploy/docker/volumes/api/kong.yaml
@@ -47,6 +47,19 @@ services:
           - /ws/chat
     plugins:
       - name: cors
+  
+  ## WebSocket for AI Terminal
+  - name: ai-terminal-websocket
+    _comment: 'WebSocket: /ws/terminal?session_id=xxx -> ws://terminal:8003/ws/terminal?session_id=xxx'
+    url: http://terminal:8003
+    protocol: ws
+    routes:
+      - name: ai-terminal-ws-route
+        strip_path: false
+        paths:
+          - /ws/terminal
+    plugins:
+      - name: cors
 
   ## Web Frontend
   - name: web-service
