remove/secret_baseline

--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     container_name: slar-ai
     build:
       context: ../../api/ai
-    image: 192.168.100.137:5000/slar-ai:latest
+    image: ghcr.io/slarops/slar-ai:latest
     expose:
       - "8002"
     ports:
@@ -30,7 +30,7 @@ services:
     container_name: slar-ai-terminal
     build:
       context: ../../api/ai/terminal
-    image: 192.168.100.137:5000/slar-ai-terminal:latest
+    image: ghcr.io/slarops/slar-ai-terminal:latest
     expose:
       - "8003"
     ports:
@@ -43,7 +43,7 @@ services:
     container_name: slar-api
     build:
       context: ../../api
-    image: 192.168.100.137:5000/slar-api:latest
+    image: ghcr.io/slarops/slar-api:latest
     expose:
       - "8080"
     ports:
@@ -63,7 +63,7 @@ services:
     container_name: slar-worker
     build:
       context: ../../api
-    image: 192.168.100.137:5000/slar-api:latest
+    image: ghcr.io/slarops/slar-api:latest
     command: ["./worker"]
     environment:
       - DATABASE_URL=${DATABASE_URL:-postgres://postgres:postgres@db:5432/postgres?sslmode=disable}
@@ -80,7 +80,7 @@ services:
     container_name: slar-slack-worker
     build:
       context: ../../api/workers
-    image: 192.168.100.137:5000/slar-slack-worker:latest
+    image: ghcr.io/slarops/slar-slack-worker:latest
     environment:
       - DATABASE_URL=${DATABASE_URL:-postgres://postgres:postgres@db:5432/postgres?sslmode=disable}
       - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN:-your-slack-bot-token}
@@ -99,7 +99,7 @@ services:
     container_name: slar-web
     build:
       context: ../../web/slar
-    image: 192.168.100.137:5000/slar-web:latest
+    image: ghcr.io/slarops/slar-web:latest
     expose:
       - "3000"
     environment:
