--- a/deploy/docker/.env.example
+++ b/deploy/docker/.env.example
@@ -1,24 +1,20 @@
-# Database Configuration
-DATABASE_URL=postgres://postgres:postgres@db:5432/postgres?sslmode=disable
-
-# OpenAI Configuration
-OPENAI_API_KEY=your-openai-api-key
-
-# Supabase Configuration
-SUPABASE_URL=https://your-project-ref.supabase.co
-SUPABASE_ANON_KEY=your-supabase-anon-key
-SUPABASE_SERVICE_KEY=your-supabase-service-key
-SUPABASE_JWT_SECRET=your-supabase-jwt-secret
-
-# Slack Configuration
-SLACK_BOT_TOKEN=xoxb-your-slack-bot-token
-SLACK_APP_TOKEN=xapp-your-slack-app-token
-
-# Kong Dashboard Credentials
-DASHBOARD_USERNAME=admin
-DASHBOARD_PASSWORD=admin
-
-# Next.js Public Variables (accessed via Kong)
-NEXT_PUBLIC_SUPABASE_URL=http://localhost:8000
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
-
+SUPABASE_URL=https://xxxxx.supabase.co
+SUPABASE_ANON_KEY=xxxx
+SUPABASE_JWT_SECRET=xxxx
+DATABASE_URL=xxxx
+SLACK_BOT_TOKEN=xxxx
+SLACK_APP_TOKEN=xxxx
+API_BASE_URL=http://api:8080
+POLL_INTERVAL=1
+BATCH_SIZE=10
+MAX_RETRIES=3
+LOG_LEVEL=INFO
+LOG_FILE=slack_worker.log
+NEXT_PUBLIC_SUPABASE_URL=xxxx
+NEXT_PUBLIC_SUPABASE_ANON_KEY=exxxx
+NEXT_PUBLIC_API_URL=http://api:8080
+NEXT_PUBLIC_APP_NAME=SLAR
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_AI_BASE_URL=http://ai:8002
+NEXT_PUBLIC_WS_URL = ws://localhost:8002/ws/chat
+OPENAI_API_KEY=xxxx
