fix/update-scheduler-timeline

--- a/deploy/helm/slar/values.yaml
+++ b/deploy/helm/slar/values.yaml
@@ -328,7 +328,7 @@ components:
       pullPolicy: IfNotPresent
     service:
       enabled: true
-      type: LoadBalancer
+      type: ClusterIP
       port: 8000
       ports:
         - name: proxy
