--- a/deploy/helm/slar/templates/deployment.yaml
+++ b/deploy/helm/slar/templates/deployment.yaml
@@ -36,22 +36,6 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       containers:
-        {{- if $comp.dockerEnabled }}
-        - name: dind
-          image: docker:dind
-          args:
-            - dockerd
-            - --host=unix:///var/run/docker.sock
-            - --group=$(DOCKER_GROUP_GID)
-          env:
-            - name: DOCKER_GROUP_GID
-              value: "123"
-          securityContext:
-            privileged: true
-          volumeMounts:
-            - name: dind-sock
-              mountPath: /var/run
-        {{- end }}
         - name: {{ $name }}
           {{- with $root.Values.securityContext }}
           securityContext:
@@ -91,11 +75,6 @@ spec:
           {{- with $comp.env }}
           env:
             {{- toYaml . | nindent 12 }}
-
-            {{- if $comp.dockerEnabled }}
-            - name: DOCKER_HOST
-              value: unix:///var/run/docker.sock
-            {{- end }}
           {{- end }}
           {{- with $comp.livenessProbe }}
           livenessProbe:
@@ -131,10 +110,6 @@ spec:
           {{- if $volumeMounts }}
           volumeMounts:
             {{- toYaml $volumeMounts | nindent 12 }}
-            {{- if $comp.dockerEnabled }}
-            - name: dind-sock
-              mountPath: /var/run/docker.sock
-            {{- end }}
           {{- end }}
           {{- end }}
       {{- if eq $name "kong" }}
@@ -148,7 +123,11 @@ spec:
       {{- $volumes := list }}
       {{- if $comp.volumes }}
         {{- range $comp.volumes }}
-          {{- if and (eq .name "ai-data") .persistentVolumeClaim }}
+          {{- if and (eq .name "ai-workspaces") .persistentVolumeClaim }}
+            {{- $_ := set .persistentVolumeClaim "claimName" (printf "%s-workspaces" (include "slar.componentFullname" (dict "root" $root "name" $name))) }}
+          {{- else if and (eq .name "ai-claude") .persistentVolumeClaim }}
+            {{- $_ := set .persistentVolumeClaim "claimName" (printf "%s-claude" (include "slar.componentFullname" (dict "root" $root "name" $name))) }}
+          {{- else if and (eq .name "ai-data") .persistentVolumeClaim }}
             {{- $_ := set .persistentVolumeClaim "claimName" (printf "%s-data" (include "slar.componentFullname" (dict "root" $root "name" $name))) }}
           {{- else if and (eq .name "mcp-config") .configMap }}
             {{- $_ := set .configMap "name" (printf "%s-mcp-config" (include "slar.componentFullname" (dict "root" $root "name" $name))) }}
@@ -162,10 +141,6 @@ spec:
       {{- if $volumes }}
       volumes:
         {{- toYaml $volumes | nindent 8 }}
-        {{- if $comp.dockerEnabled }}
-        - name: dind-sock
-          emptyDir: {}
-        {{- end }}
       {{- end }}
       {{- end }}
       {{- with $root.Values.nodeSelector }}
