--- a/deploy/helm/slar/templates/pvc.yaml
+++ b/deploy/helm/slar/templates/pvc.yaml
@@ -1,10 +1,14 @@
 {{- $root := . -}}
 {{- range $name, $comp := ( .Values.components | default dict ) }}
 {{- if and $comp.persistence $comp.persistence.enabled }}
+{{- $pvcSuffix := "data" }}
+{{- if eq $name "ai" }}
+  {{- $pvcSuffix = "workspaces" }}
+{{- end }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ include "slar.componentFullname" (dict "root" $root "name" $name) }}-data
+  name: {{ include "slar.componentFullname" (dict "root" $root "name" $name) }}-{{ $pvcSuffix }}
   labels:
     {{- include "slar.componentLabels" (dict "root" $root "name" $name) | nindent 4 }}
 spec:
@@ -20,6 +24,28 @@ spec:
   resources:
     requests:
       storage: {{ $comp.persistence.size | default "10Gi" }}
+---
+{{- end }}
+{{- if and $comp.claudePersistence $comp.claudePersistence.enabled }}
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: {{ include "slar.componentFullname" (dict "root" $root "name" $name) }}-claude
+  labels:
+    {{- include "slar.componentLabels" (dict "root" $root "name" $name) | nindent 4 }}
+spec:
+  accessModes:
+    - {{ $comp.claudePersistence.accessMode | default "ReadWriteOnce" }}
+  {{- if $comp.claudePersistence.storageClass }}
+  {{- if (eq "-" $comp.claudePersistence.storageClass) }}
+  storageClassName: ""
+  {{- else }}
+  storageClassName: "{{ $comp.claudePersistence.storageClass }}"
+  {{- end }}
+  {{- end }}
+  resources:
+    requests:
+      storage: {{ $comp.claudePersistence.size | default "5Gi" }}
 ---
 {{- end }}
 {{- end }}
