docs: create comprehensive CLAUDE.md and update README with accurate architecture details

--- a/.env.example
+++ b/.env.example
@@ -1,47 +1,71 @@
 # SLAR Environment Configuration
 # Copy this file to .env and fill in your values
 # cp .env.example .env
+#
+# ⚠️  SECURITY WARNING:
+# - Never commit .env files with real secrets to git
+# - Use strong, unique passwords and API keys
+# - Rotate secrets regularly
+# - Use different credentials for development and production
 
 # ======================
 # Database & Supabase
 # ======================
 DATABASE_URL=postgresql://postgres:postgres@localhost:54322/postgres
 SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_ANON_KEY=your-supabase-anon-key
-SUPABASE_JWT_SECRET=your-supabase-jwt-secret
+SUPABASE_ANON_KEY=your-supabase-anon-key-here
+SUPABASE_JWT_SECRET=your-supabase-jwt-secret-here
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
 # ======================
 # Frontend (Next.js)
 # ======================
 NEXT_PUBLIC_SUPABASE_URL=http://localhost:8000
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key-here
 NEXT_PUBLIC_API_URL=http://localhost:8000
+# WebSocket URL for AI agent
+NEXT_PUBLIC_WS_URL=ws://localhost:8002/ws/chat
 
 # ======================
 # API (Go Backend)
 # ======================
 PORT=8080
 SLAR_ENV=development
+# CORS allowed origins (comma-separated, * for development only)
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000
 
 # ======================
 # AI Agent (Python/FastAPI)
 # ======================
-OPENAI_API_KEY=sk-your-openai-api-key
+OPENAI_API_KEY=sk-your-openai-api-key-here
 OPENAI_MODEL=gpt-4o
+AI_PORT=8002
 ENABLE_CODE_EXECUTOR=false
 CHROMA_COLLECTION_NAME=autogen_docs
+# CORS allowed origins for AI agent
+AI_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000
+# Rate limiting (requests per minute)
+AI_RATE_LIMIT=60
 
 # ======================
 # Slack Integration
 # ======================
-SLACK_BOT_TOKEN=xoxb-your-slack-bot-token
-SLACK_APP_TOKEN=xapp-your-slack-app-token
+SLACK_BOT_TOKEN=xoxb-your-slack-bot-token-here
+SLACK_APP_TOKEN=xapp-your-slack-app-token-here
+SLACK_SIGNING_SECRET=your-slack-signing-secret-here
+
+# ======================
+# Firebase Cloud Messaging (Optional)
+# ======================
+# FCM_CREDENTIALS_PATH=./firebase-credentials.json
+# FCM_PROJECT_ID=your-firebase-project-id
 
 # ======================
 # Kong API Gateway
 # ======================
 DASHBOARD_USERNAME=admin
-DASHBOARD_PASSWORD=admin
+# ⚠️  CHANGE THIS IN PRODUCTION!
+DASHBOARD_PASSWORD=change-me-in-production
 
 # ======================
 # Workers
@@ -54,11 +78,23 @@ LOG_LEVEL=INFO
 # ======================
 # Optional Services
 # ======================
-# Redis (if using)
+# Redis (for caching and rate limiting)
 # REDIS_URL=redis://localhost:6379
 
-# Prometheus (if using)
+# Prometheus (for metrics)
 # PROMETHEUS_URL=http://localhost:9090
 
-# Datadog (if using)
-# DATADOG_API_KEY=your-datadog-api-key
+# Datadog (for monitoring)
+# DATADOG_API_KEY=your-datadog-api-key-here
+
+# ======================
+# Security Settings
+# ======================
+# Session secret for JWT signing (generate with: openssl rand -base64 32)
+# SESSION_SECRET=your-session-secret-here
+
+# API rate limiting (requests per minute per IP)
+# API_RATE_LIMIT=100
+
+# WebSocket connection timeout (seconds)
+# WS_TIMEOUT=300
