--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,134 @@
-env
+# ==========================================
+# Environment & Secrets
+# ==========================================
 .env
+.env.*
+.env.local
+.env.production
+.env.development
+!.env.example
+*.key
+*.pem
+*.p12
+*.pfx
+credentials.json
+firebase-credentials.json
+service-account.json
+
+# ==========================================
+# Python
+# ==========================================
+env/
+venv/
+.venv/
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.hypothesis/
+
+# ==========================================
+# Node.js
+# ==========================================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.eslintcache
+.next/
+out/
+.cache/
+.parcel-cache/
+
+# ==========================================
+# Go
+# ==========================================
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+go.work
+bin/
+
+# ==========================================
+# IDEs & Editors
+# ==========================================
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 .DS_Store
-# .claude
+Thumbs.db
+
+# ==========================================
+# Database
+# ==========================================
+*.db
+*.sqlite
+*.sqlite3
+
+# ==========================================
+# Logs
+# ==========================================
+*.log
+logs/
+*.log.*
+
+# ==========================================
+# Temporary files
+# ==========================================
+tmp/
+temp/
+*.tmp
+*.bak
+*.backup
+
+# ==========================================
+# AI Agent specific
+# ==========================================
+.chromadb_autogen/
+.claude/CLAUDE.md
+# Uncomment to ignore user skills/plugins
+# .claude/skills/
+# .claude/plugins/
+
+# ==========================================
+# Docker
+# ==========================================
+.dockerignore
+
+# ==========================================
+# OS specific
+# ==========================================
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.Spotlight-V100
+.Trashes
