--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -88,7 +88,7 @@ services:
     container_name: slar-web
     build:
       context: ../../web/slar
-      dockerfile: Dockerfile.simple
+      dockerfile: Dockerfile
       # Note: Requires building Next.js locally first
       # Run: cd ../../web/slar && npm run build
     image: ghcr.io/slarops/slar-web:1.0.1
