--- a/web/slar/package.json
+++ b/web/slar/package.json
@@ -16,9 +16,11 @@
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
+    "chart.js": "^4.5.1",
     "highlight.js": "^11.11.1",
     "next": "15.5.0",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
