--- a/web/slar/package.json
+++ b/web/slar/package.json
@@ -12,10 +12,6 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.55.0",
     "@types/uuid": "^10.0.0",
-    "@xterm/addon-canvas": "^0.7.0",
-    "@xterm/addon-fit": "^0.10.0",
-    "@xterm/addon-web-links": "^0.11.0",
-    "@xterm/xterm": "^5.5.0",
     "chart.js": "^4.5.1",
     "highlight.js": "^11.11.1",
     "next": "15.5.0",
@@ -33,9 +29,9 @@
     "vis-timeline": "^8.3.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/react-syntax-highlighter": "^15.5.13",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "5.9.3"
   }
 }
