--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,6 +7,8 @@ on:
       - 'api/**'
       - 'web/**'
       - '.github/workflows/build.yaml'
+    tags:
+      - 'v*'
   workflow_dispatch:
 
 permissions:
