--- a/deploy/helm/slar/values.yaml
+++ b/deploy/helm/slar/values.yaml
@@ -124,6 +124,23 @@ tolerations: []
 # Affinity rules
 affinity: {}
 
+# Migration job configuration
+migration:
+  enabled: true
+  image:
+    repository: migration:latest
+    name: slar-migration
+    tag: 1.0.1
+    pullPolicy: Always
+  backoffLimit: 3
+  resources:
+    limits:
+      cpu: "500m"
+      memory: "512Mi"
+    requests:
+      cpu: "250m"
+      memory: "256Mi"
+
 # Components configuration with persistent storage
 components:
   ai:
