--- a/deploy/docker/.env.example
+++ b/deploy/docker/.env.example
@@ -1,20 +1,8 @@
-SUPABASE_URL=https://xxxxx.supabase.co
+SUPABASE_URL=https://xxxxxx.supabase.co
 SUPABASE_ANON_KEY=xxxx
 SUPABASE_JWT_SECRET=xxxx
-DATABASE_URL=xxxx
+SUPABASE_SERVICE_ROLE_KEY=xxxx
+DATABASE_URL=postgresql://xxxx@aws-1-ap-south-1.pooler.supabase.com:5432/postgres
 SLACK_BOT_TOKEN=xxxx
 SLACK_APP_TOKEN=xxxx
 API_BASE_URL=http://api:8080
-POLL_INTERVAL=1
-BATCH_SIZE=10
-MAX_RETRIES=3
-LOG_LEVEL=INFO
-LOG_FILE=slack_worker.log
-NEXT_PUBLIC_SUPABASE_URL=xxxx
-NEXT_PUBLIC_SUPABASE_ANON_KEY=exxxx
-NEXT_PUBLIC_API_URL=http://api:8080
-NEXT_PUBLIC_APP_NAME=SLAR
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-NEXT_PUBLIC_AI_BASE_URL=http://ai:8002
-NEXT_PUBLIC_WS_URL = ws://localhost:8002/ws/chat
-OPENAI_API_KEY=xxxx
