feat: Enhance Cloudflare integration with worker URL support and new metrics API

--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,9 @@ temp/
 # .claude/skills/
 # .claude/plugins/
 
+# Cursor IDE chat assets (auto-generated from screenshots)
+assets/
+
 # ==========================================
 # Docker
 # ==========================================
