--- a/web/slar/package.json
+++ b/web/slar/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.5.1",
     "highlight.js": "^11.11.1",
     "next": "15.5.0",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "19.1.0",
