--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -21,7 +21,6 @@ services:
     container_name: slar-ai
     build:
       context: ../../api/ai
-
     expose:
       - "8002"
     ports:
@@ -35,7 +34,7 @@ services:
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
       - SUPABASE_JWT_SECRET=${SUPABASE_JWT_SECRET}
-      - AI_ALLOWED_ORIGINS=${AI_ALLOWED_ORIGINS:-http://localhost:3000,http://localhost:8000}
+      - SUPABASE_JWT_SECRET=${SUPABASE_JWT_SECRET}
       - AI_RATE_LIMIT=${AI_RATE_LIMIT:-60}
       - SLAR_API_URL=${SLAR_API_URL:-http://api:8080}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
@@ -53,7 +52,6 @@ services:
     container_name: slar-api
     build:
       context: ../../api
-
     expose:
       - "8080"
     ports:
@@ -82,7 +80,6 @@ services:
     container_name: slar-slack-worker
     build:
       context: ../../api/workers
-
     environment:
       - DATABASE_URL=${DATABASE_URL:-postgres://postgres:postgres@db:5432/postgres?sslmode=disable}
       - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN:-your-slack-bot-token}
@@ -102,7 +99,6 @@ services:
     build:
       context: ../../web/slar
       dockerfile: Dockerfile
-    image: ghcr.io/slarops/slar-web:1.0.1
     expose:
       - "3000"
     ports:
@@ -152,6 +148,15 @@ services:
     networks:
       - slar-network
     entrypoint: bash -c 'eval "echo \"$$(cat ~/temp.yml)\"" > ~/kong.yml && /docker-entrypoint.sh kong docker-start'
+
+  cloudflared:
+    container_name: slar-cloudflared
+    image: cloudflare/cloudflared:latest
+    command: tunnel run --token ${TUNNEL_TOKEN}
+    restart: unless-stopped
+    networks:
+      - slar-network
+
 
 networks:
   slar-network:
