--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # ==========================================
 # Environment & Secrets
 # ==========================================
-.env
-.env.*
-.env.local
-.env.production
-.env.development
+# .env
+# .env.*
+# .env.local
+# .env.production
+# .env.development
 !.env.example
 *.key
 *.pem
