--- a/deploy/docker/.env.example
+++ b/deploy/docker/.env.example
@@ -1,8 +1,13 @@
-SUPABASE_URL=https://xxxxxx.supabase.co
-SUPABASE_ANON_KEY=xxxx
-SUPABASE_JWT_SECRET=xxxx
-SUPABASE_SERVICE_ROLE_KEY=xxxx
-DATABASE_URL=postgresql://xxxx@aws-1-ap-south-1.pooler.supabase.com:5432/postgres
-SLACK_BOT_TOKEN=xxxx
-SLACK_APP_TOKEN=xxxx
-API_BASE_URL=http://api:8080
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
+SUPABASE_JWT_SECRET=
+SUPABASE_SERVICE_ROLE_KEY=
+DATABASE_URL=
+SLACK_BOT_TOKEN=
+SLACK_APP_TOKEN=
+API_BASE_URL=
+ANTHROPIC_API_KEY=
+
+SLAR_CLOUD_URL=
+SLAR_CLOUD_TOKEN=
+SLAR_INSTANCE_ID=
