--- a/deploy/helm/slar/templates/ingress.yaml
+++ b/deploy/helm/slar/templates/ingress.yaml
@@ -1,6 +1,6 @@
 {{- $root := . -}}
 {{- range $name, $comp := ( .Values.components | default dict ) }}
-{{- if and $comp.ingress $comp.ingress.enabled -}}
+{{- if and $comp.ingress $comp.ingress.enabled }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
