--- a/deploy/helm/slar/values.yaml
+++ b/deploy/helm/slar/values.yaml
@@ -9,7 +9,7 @@ replicaCount: 1
 image:
   repository: 192.168.100.137:5000/
   pullPolicy: Always
-  tag: ""
+  tag: "latest"
 
 # Image pull secrets for private registries
 imagePullSecrets: []
@@ -146,9 +146,7 @@ components:
   ai:
     replicas: 1
     image:
-      tag: latest
       name: slar-ai
-      pullPolicy: Always
     service:
       enabled: true
       type: ClusterIP
@@ -159,39 +157,12 @@ components:
         value: "8002"
       - name: HOST
         value: "0.0.0.0"
-      - name: SUPABASE_URL
-        valueFrom:
-          secretKeyRef:
-            name: slar-secrets
-            key: supabase-url
-      - name: SUPABASE_ANON_KEY
-        valueFrom:
-          secretKeyRef:
-            name: slar-secrets
-            key: supabase-anon-key
-      - name: SUPABASE_SERVICE_ROLE_KEY
-        valueFrom:
-          secretKeyRef:
-            name: slar-secrets
-            key: supabase-service-role-key
-      - name: SUPABASE_JWT_SECRET
-        valueFrom:
-          secretKeyRef:
-            name: slar-secrets
-            key: supabase-jwt-secret
-      - name: ANTHROPIC_API_KEY
-        valueFrom:
-          secretKeyRef:
-            name: slar-secrets
-            key: anthropic-api-key
-
-      # Optional environment variables
-      - name: SLAR_API_URL
-        value: "http://slar-api.slar:8080"
-      - name: SLAR_BACKEND_URL
-        value: "http://slar-api.slar:8080"
       - name: USER_WORKSPACES_DIR
         value: "/app/workspaces"
+      - name: SLAR_CONFIG_PATH
+        value: "/app/config/config.yaml"
+    ingress:
+      enabled: false
 
     # Resource limits
     resources:
@@ -223,6 +194,9 @@ components:
         mountPath: /app/workspaces
       - name: ai-claude
         mountPath: /root/.claude
+      - name: app-config
+        mountPath: /app/config
+        readOnly: true
 
     # Volumes definition
     volumes:
@@ -232,6 +206,12 @@ components:
       - name: ai-claude
         persistentVolumeClaim:
           claimName: '{{ include "slar.componentFullname" (dict "root" . "name" "ai") }}-claude'
+      - name: app-config
+        secret:
+          secretName: slar-secrets
+          items:
+            - key: config.dev.yaml
+              path: config.yaml
 
     # RBAC configuration for AI pod
     rbac:
@@ -245,8 +225,6 @@ components:
   api:
     image:
       name: slar-api
-      tag: latest
-      pullPolicy: Always
     service:
       enabled: true
       type: ClusterIP
@@ -254,74 +232,38 @@ components:
     env:
       - name: PORT
         value: "8080"
-      - name: DATABASE_URL
-        valueFrom:
-          secretKeyRef:
-            name: slar-secrets
-            key: database-url
-      - name: SUPABASE_URL
-        valueFrom:
-          secretKeyRef:
-            name: slar-secrets
-            key: supabase-url
-      - name: SUPABASE_ANON_KEY
-        valueFrom:
-          secretKeyRef:
-            name: slar-secrets
-            key: supabase-anon-key
-      - name: SUPABASE_JWT_SECRET
-        valueFrom:
-          secretKeyRef:
-            name: slar-secrets
-            key: supabase-jwt-secret
       - name: SLAR_ENV
         value: "production"
-      - name: SLAR_CLOUD_URL
-        value: "https://relay-slar-saas.slarhq.com"
-      - name: SLAR_CLOUD_TOKEN
-        valueFrom:
-          secretKeyRef:
-            name: slar-secrets
-            key: slar-cloud-token
-      - name: SLAR_INSTANCE_ID
-        value: ""  # Set this to your instance ID
-      - name: SLAR_PUBLIC_URL
-        value: "https://api.yourdomain.com"  # Set this to your public API URL
-      - name: SLAR_AGENT_URL
-        value: "https://agent.yourdomain.com"  # Set this to your public AI agent URL
+      - name: SLAR_CONFIG_PATH
+        value: "/app/config/config.yaml"
+    
+    # Mount config file from secret
+    volumeMounts:
+      - name: app-config
+        mountPath: /app/config
+        readOnly: true
+      - name: api-data
+        mountPath: /app/data
+    volumes:
+      - name: app-config
+        secret:
+          secretName: slar-secrets
+          items:
+            - key: config.dev.yaml
+              path: config.yaml
+      - name: api-data
+        emptyDir: {}
     ingress:
       enabled: false
-      hosts:
-        - host: dev-api.slarhq.com
-          paths:
-            - path: /
-              pathType: Prefix
 
   slack-worker:
     image:
       name: slar-slack-worker
-      tag: latest
-      pullPolicy: Always
     service:
       enabled: false
     env:
-      - name: DATABASE_URL
-        valueFrom:
-          secretKeyRef:
-            name: slar-secrets
-            key: database-url
-      - name: SLACK_BOT_TOKEN
-        valueFrom:
-          secretKeyRef:
-            name: slar-secrets
-            key: slack-bot-token
-      - name: SLACK_APP_TOKEN
-        valueFrom:
-          secretKeyRef:
-            name: slar-secrets
-            key: slack-app-token
-      - name: API_BASE_URL
-        value: "http://slar-api:8080"
+      - name: SLAR_CONFIG_PATH
+        value: "/app/config/config.yaml"
       - name: POLL_INTERVAL
         value: "1"
       - name: BATCH_SIZE
@@ -332,42 +274,29 @@ components:
         value: "DEBUG"
       - name: LOG_FILE
         value: "/app/slack_worker.log"
+    
+    # Mount config file from secret
+    volumeMounts:
+      - name: app-config
+        mountPath: /app/config
+        readOnly: true
+    volumes:
+      - name: app-config
+        secret:
+          secretName: slar-secrets
+          items:
+            - key: config.dev.yaml
+              path: config.yaml
 
   web:
     image:
       name: slar-web
-      tag: latest
-      pullPolicy: Always
     service:
       enabled: true
       type: ClusterIP
       port: 3000
-    env:
-      - name: NEXT_PUBLIC_SUPABASE_URL
-        valueFrom:
-          secretKeyRef:
-            name: slar-secrets
-            key: supabase-url
-      - name: NEXT_PUBLIC_SUPABASE_ANON_KEY
-        valueFrom:
-          secretKeyRef:
-            name: slar-secrets
-            key: supabase-anon-key
-      - name: NEXT_PUBLIC_API_URL
-        value: "https://api.yourdomain.com"  # Set this to your public API URL
-      - name: NEXT_PUBLIC_AI_API_URL
-        value: "https://agent.yourdomain.com"  # Set this to your public AI agent URL
-      - name: NEXT_PUBLIC_AI_WS_URL
-        value: "wss://agent.yourdomain.com/ws/chat"  # Set this to your public AI WebSocket URL
 
   kong:
-    ingress:
-      enabled: false
-      hosts:
-        - host: dev.slarhq.com
-          paths:
-            - path: /
-              pathType: Prefix
     image:
       repository: kong
       tag: "2.8.1"
@@ -411,7 +340,7 @@ components:
       name: kong-config
 
 cloudflared:
-  enabled: false
+  enabled: true
   image:
     repository: cloudflare/cloudflared
     tag: latest
