feat: Migrate frontend to a new AI API, introducing new database utilities and routes in the backend.

--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,9 +1,9 @@
 # Environment files
-# .env
-# .env.local
-# .env.production
-# .env.staging
-# .envrc
+.env
+.env.local
+.env.production
+.env.staging
+.envrc
 
 # Firebase credentials
 firebase-service-account-key.json
