--- a/deploy/docker/.env.example
+++ b/deploy/docker/.env.example
@@ -1,3 +1,5 @@
+# Standard Environment Variables
+# These are loaded directly by the application (no SLAR_ prefix needed)
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
 SUPABASE_JWT_SECRET=
@@ -5,9 +7,14 @@ SUPABASE_SERVICE_ROLE_KEY=
 DATABASE_URL=
 SLACK_BOT_TOKEN=
 SLACK_APP_TOKEN=
-API_BASE_URL=
 ANTHROPIC_API_KEY=
 
+# Application Config
+PORT=8080
+API_BASE_URL=
+
+# Notification Gateway Config
+# These still map to internal keys but passed via docker-compose usually
 SLAR_CLOUD_URL=
 SLAR_CLOUD_TOKEN=
 SLAR_INSTANCE_ID=
